updating manuscript with timing data and tidying up

--- a/paper/modularity.bib
+++ b/paper/modularity.bib
@@ -21,23 +21,6 @@
 }
 
 
-@article{tur2014increasing,
-  title={Increasing modularity when downscaling networks from species to individuals},
-  author={Tur, Cristina and Olesen, Jens M and Traveset, Anna},
-  journal={Oikos},
-  year={2014},
-  publisher={Wiley Online Library}
-}
-
-
-@article{pilosof2014host,
-  title={Host--parasite network structure is associated with community-level immunogenetic diversity},
-  author={Pilosof, Shai and Fortuna, Miguel A and Cosson, Jean-Fran{\c{c}}ois and Galan, Maxime and Kittipong, Chaisiri and Ribas, Alexis and Segal, Eran and Krasnov, Boris R and Morand, Serge and Bascompte, Jordi},
-  journal={Nature communications},
-  volume={5},
-  year={2014},
-  publisher={Nature Publishing Group}
-}
 
 @article{flores2012multi,
   title={Multi-scale structure and geographic drivers of cross-infection within marine bacteria and phages},
@@ -124,31 +107,41 @@
 
 
 
-@article{bascompte2003nested,
-  title={The nested assembly of plant--animal mutualistic networks},
-  author={Bascompte, J. and Jordano, P. and Meli{\'a}n, C. J. and Olesen, J. M.},
+
+@article{gomez2009analysis,
+  title={Analysis of community structure in networks of correlated data},
+  author={G{\'o}mez, Sergio and Jensen, Pablo and Arenas, Alex},
+  journal={Physical Review E},
+  volume={80},
+  number={1},
+  pages={016114},
+  year={2009},
+  publisher={APS}
+}
+
+@article{olesen2007modularity,
+  title={The modularity of pollination networks},
+  author={Olesen, Jens M and Bascompte, Jordi and Dupont, Yoko L and Jordano, Pedro},
   journal={Proceedings of the National Academy of Sciences},
-  volume={100},
-  doi={10.1073/pnas.1633576100},
-  number={16},
-  pages={9383--9387},
-  year={2003},
+  volume={104},
+  number={50},
+  pages={19891--19896},
+  year={2007},
   publisher={National Acad Sciences}
 }
 
 
-
-@article{gotelli2001research,
-  title={Research frontiers in null model analysis},
-  author={Gotelli, N. J.},
-  journal={Global ecology and biogeography},
-  volume={10},
-  number={4},
-  doi={10.1046/j.1466-822X.2001.00249.x},
-  pages={337--343},
-  year={2001},
-  publisher={Wiley Online Library}
+@article{clauset2008hierarchical,
+  title={Hierarchical structure and the prediction of missing links in networks},
+  author={Clauset, Aaron and Moore, Cristopher and Newman, Mark EJ},
+  journal={Nature},
+  volume={453},
+  number={7191},
+  pages={98--101},
+  year={2008},
+  publisher={Nature Publishing Group}
 }
+
 
 @incollection{murataMod,
   year={2010},
@@ -186,56 +179,6 @@
   pages={90--98},
   year={2014},
   publisher={Wiley Online Library}
-}
-
-
-@article{barber2009detecting,
-  title={Detecting network communities by propagating labels under constraints},
-  author={Barber, Michael J and Clark, John W},
-  journal={Physical Review E},
-  volume={80},
-  number={2},
-  pages={026129},
-  year={2009},
-  publisher={APS}
-}
-
-
-@article{newman2006modularity,
-  title={Modularity and community structure in networks},
-  author={Newman, Mark EJ},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={103},
-  number={23},
-  pages={8577--8582},
-  year={2006},
-  publisher={National Acad Sciences}
-}
-
-
-@article{schuetz2008efficient,
-  title={Efficient modularity optimization by multistep greedy algorithm and vertex mover refinement},
-  author={Schuetz, Philipp and Caflisch, Amedeo},
-  journal={Physical Review E},
-  volume={77},
-  number={4},
-  pages={046112},
-  year={2008},
-  publisher={APS}
-}
-
-
-
-
-@article{schuetz2008multistep,
-  title={Multistep greedy algorithm identifies community structure in real-world and computer-generated networks},
-  author={Schuetz, Philipp and Caflisch, Amedeo},
-  journal={Physical Review E},
-  volume={78},
-  number={2},
-  pages={026112},
-  year={2008},
-  publisher={APS}
 }
 
 
@@ -298,20 +241,6 @@
   pages={026113},
   year={2004},
   publisher={APS}
-}
-
-
-@INPROCEEDINGS{NMI,
-author={Ana, L.N.F. and Jain, A.K.},
-booktitle={Computer Vision and Pattern Recognition, 2003. Proceedings. 2003 IEEE Computer Society Conference on},
-title={Robust data clustering},
-year={2003},
-month={June},
-volume={2},
-pages={II-128-II-133 vol.2},
-keywords={data analysis;information theory;pattern clustering;K-means algorithm;arbitrary shape;arbitrary size;bootstrapping;cluster membership variance;clustering ensemble;consistency agreement;data clustering;data partition combination;evidence accumulation method;information-theoretical framework;multiple clustering;mutual information based criteria optimization;pairwise pattern association;voting mechanism analysis;Analysis of variance;Clustering algorithms;Computer science;Data engineering;Mutual information;Partitioning algorithms;Pattern analysis;Robustness;Shape;Voting},
-doi={10.1109/CVPR.2003.1211462},
-ISSN={1063-6919}
 }
 
 
@@ -407,7 +336,7 @@ ISSN={1063-6919}
 
 @article{kato1990insect,
   title={Insect-flower relationship in the primary beech forest of Ashu, Kyoto: an overview of the flowering phenology and the seasonal pattern of insect visits},
-  author={Kato, Makoto and Kakutani, Takehiko and Inoue, Tamiji and Itino, Takao and others},
+  author={Kato, Makoto and Kakutani, Takehiko and Inoue, Tamiji and Itino, Takao},
   year={1990},
   publisher={Biological Laboratory, Kyoto University}
 }
